assets/css/style.css
/* ... */
#topbar .social-links a {
  color: rgba(255, 255, 255, 0.7);
  line-height: 0;
  transition: 0.3s;
  margin-left: 20px;
}

#topbar .social-links a:hover {
  color: white;
}

#topbar span, #topbar a{font-size:0.75rem;font-weight: 700;}
/*--------------------------------------------------------------
# Header
--------------------------------------------------------------*/
#header {
  background: #03a9f4;
  transition: all 0.5s;
  z-index: 9999;
  margin-bottom: 5px;
  height: 50px;
  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
}

#header.fixed-top {
  height: 70px;
}

#header .logo {
  font-size: 2rem;
  margin: 0;
  padding: 5px ;
  line-height: 1;
  font-weight: 600;
  letter-spacing: 0.8px;
   
}
#header .logo div{
  margin:10px 0 0 0;
}
#header .logo a {
  color: #fff;
}

#header .logo a span {
  color: #106eea;
}

#header .logo img {
  max-height: 40px;
}

.scrolled-offset {
  margin-top: 70px;
}

 /*--------------------------------------------------------------
# Navigation Menu
--------------------------------------------------------------*/
/* Desktop Navigation */
@media (min-width: 1200px) {
  .navmenu {
    padding: 0;
  }

  .navmenu ul {
    margin: 0;
    padding: 0;
    display: flex;
    list-style: none;
    align-items: center;
  }

  .navmenu li {
    position: relative;
  }

  .navmenu>ul>li {
    white-space: nowrap;
    padding:9px;
  }

  .navmenu>ul>li:last-child {
    background: #2eb5f2;
    border-left: 1px solid #3fc3ff;
  }

  .navmenu a,
  .navmenu a:focus {
    color: #fff;
    font-size: 0.875rem;
    padding: 0 2px;
    font-weight: 400;
    display: flex;
    align-items: center;
    justify-content: space-between;
    white-space: nowrap;
    transition: 0.3s;
    position: relative;
  }

  .navmenu a i,
  .navmenu a:focus i {
    font-size: 12px;
        line-height: 0;
        margin-left: 5px;
        transition: 0.3s;
        padding: 0 5px;
  }

  .navmenu>ul>li>a:before {
    content: "";
    position: absolute;
    width: 100%;
    height: 2px;
    bottom: -6px;
    left: 0;
    background-color:rgba(53, 37, 41, 0.03);;
    visibility: hidden;
    width: 0px;
    transition: all 0.3s ease-in-out 0s;
  }

  .navmenu a:hover:before,
  .navmenu li:hover>a:before,
  .navmenu .active:before {
    visibility: visible;
    width: 100%;
  }

  .navmenu li:hover>a,
  .navmenu .active,
  .navmenu .active:focus ,.navmenu>ul>li:hover{
    color: #fff;
    background:rgb(0 152 220);
    cursor: pointer;
  }

  .navmenu .dropdown ul {
    margin: 0;
    padding: 10px 0;
    background: #fff;
    display: block;
    position: absolute;
    visibility: hidden;
    left: 0px;
    top: 130%;
    opacity: 0;
    transition: 0.3s;
    border-radius: 4px;
    z-index: 99;
    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
  }

  .navmenu .dropdown ul li {
    min-width: 200px;
  }

  .navmenu .dropdown ul a {
    padding: 10px 20px;
    font-size: 13px;
    text-transform: none;
    color:#000;
  }

  .navmenu .dropdown ul a i {
    font-size: 12px;
  }

  .navmenu .dropdown ul a:hover,
  .navmenu .dropdown ul .active:hover,
  .navmenu .dropdown ul li:hover>a {
    color: #fff;
  }

  .navmenu .dropdown:hover>ul {
    opacity: 1;
    top: 100%;
    visibility: visible;
  }

  .navmenu .dropdown .dropdown ul {
    top: 0;
    left: -90%;
    visibility: hidden;
  }

  .navmenu .dropdown .dropdown:hover>ul {
    opacity: 1;
    top: 0;
    left: -100%;
    visibility: visible;
  }
}
.signin-bg{
  background: #2eb5f2;
}
 
/* Mobile Navigation */
@media (max-width: 1199px) {


  .mobile-nav-toggle {
    color: #000;
    font-size: 2rem;
    line-height: 0;
    margin-right: 10px;
    cursor: pointer;
    transition: color 0.3s;
  }

  .navmenu {
    padding: 0;
    z-index: 9997;
  }

  .navmenu ul {
    display: none;
    position: absolute;
    inset: 60px 20px 20px 20px;
    padding: 10px 0;
    margin: 0;
    border-radius: 6px;
    background-color: #fff;
    border: 1px solid #ccc;
    box-shadow: none;
    overflow-y: auto;
    transition: 0.3s;
    z-index: 9998;
  }

  .navmenu a,
  .navmenu a:focus {
    color: #000;
    padding: 10px 20px;
    font-size: 0.725rem;
    font-weight: 500;
    display: flex;
    align-items: center;
    justify-content: start;
    white-space: nowrap;
    transition: 0.3s;
  }

  .navmenu a i,
  .navmenu a:focus i {
    font-size: 12px;
    line-height: 0;
    margin-left: 0px;
    width: 30px;
    height: 30px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    transition: 0.3s;
    background-color: rgba(33, 37, 41, 0.03);;
  }

  .navmenu a i:hover,
  .navmenu a:focus i:hover {
    color: #03a9f4;
    background: #e9f7ff;
  }

  .navmenu a:hover,
  .navmenu .active,
  .navmenu .active:focus {
    color: #03a9f4;
    background: #e9f7ff;
  }

  .navmenu .active i,
  .navmenu .active:focus i {
    background-color:rgba(33, 37, 41, 0.03);
    color: #000;
    transform: rotate(180deg);
  }

  .navmenu .dropdown ul {
    position: static;
    display: none;
    z-index: 99;
    padding: 0px 0;
    margin: 10px 20px;
    background-color:#fff;
    transition: all 0.5s ease-in-out;
  }

  .navmenu .dropdown ul ul {
    background-color: rgba(33, 37, 41, 0.1);
  }

  .navmenu .dropdown>.dropdown-active {
    display: block;
    background-color: rgba(33, 37, 41, 0.03);
  }

  .mobile-nav-active {
    overflow: hidden;
  }

  .mobile-nav-active .mobile-nav-toggle {
    color: #fff;
    position: absolute;
    font-size: 32px;
    top: 15px;
    right: 15px;
    margin-right: 0;
    z-index: 9999;
  }

  .mobile-nav-active .navmenu {
    position: fixed;
    overflow: hidden;
    inset: 0;
    background: rgba(33, 37, 41, 0.8);
    transition: 0.3s;
  }

  .mobile-nav-active .navmenu>ul {
    display: block;
  }
}
#navmenu i {color:#fff;}
/* ... */

